--- a/sections/Analyse/SystemDescription/RTS.tex
+++ b/sections/Analyse/SystemDescription/RTS.tex
@@ -15,16 +15,30 @@ its deadlines.}
 \end{center} 
 
 %\subsection{Tasks}
-\fix{Real-time systems are often comprised of different task working together.
-These task are often run at a regular interval, and have deadlines dictating when the
-task should be completed. A task works by sensing the environment around it,
-performing a computation and deciding whether or not to react to the input by
-changing the system state. In an example of a task in a
-real-time system, such as ABS, a task monitors the applied pressure on the brakes and the individual
-speed of the wheels. It then performs a computation to see whether or not the
-brakes have locked, and depending on the outcome it will change the state of the
-system(the brakes) in order to prevent locking of the brakes 
-\citep[ch.1A]{Realtime}.}{Need a slight rewrite}\nl
+Real-time systems often consists of several tasks or threads, which work
+together in tandem. These tasks can be run at set intervals, or might have
+individual deadlines for when they must have finished their execution. When a
+task is executed, it works by sensing the environment around it, performing a
+computation and deciding whether or not to react to the input by changing the
+system state. In an example of a task in a real-time system, such as ABS, a task
+monitors the applied pressure on the brakes and the individual speed of the
+wheels. It then performs a computation to see whether or not the brakes have
+locked, and depending on the outcome it will change the state of the system(the
+brakes) in order to prevent locking of the brakes \citep[ch.1A]{Realtime}.
+
+
+% \fix{Real-time systems are often comprised of different task working together.
+% These task are often run at a regular interval, and have deadlines dictating when the
+% task should be completed.
+% 
+% A task works by sensing the environment around it,
+% performing a computation and deciding whether or not to react to the input by
+% changing the system state. In an example of a task in a
+% real-time system, such as ABS, a task monitors the applied pressure on the brakes and the individual
+% speed of the wheels. It then performs a computation to see whether or not the
+% brakes have locked, and depending on the outcome it will change the state of the
+% system(the brakes) in order to prevent locking of the brakes 
+% \citep[ch.1A]{Realtime}.}{Need a slight rewrite}\nl
 
 Tasks can generally be divided into two different groups, \textbf{periodic} and
 \textbf{aperiodic} \citep[ch.1A]{Realtime}: 
