--- a/sections/Design/SystemArchitecture/SoftwareArch.tex
+++ b/sections/Design/SystemArchitecture/SoftwareArch.tex
@@ -1,8 +1,19 @@
-\section{Hardware and Software Architecture}
+\section{Software Architecture}
 
 In this section we will go through the hardware and the software architecture,
 this means that the different hardware and software layers will be explained. In
-\autoref{CallStack}, it can be seen how the calls through software is handled. 
-
+\autoref{CallStack}, it can be seen how the calls through software is handled.
+Furthermore, this can help improve the software by showing how many nested calls
+are in the software. In our program the call stack is not very deep, so this is
+not a big issue. However, we have no way to find out how deep the call stack for
+the camera is. To solve this a runtime analysis of the software will be created. 
 \figx[0.6]{CallStack}{The call stack from the software} 
 
+\section{Hardware Architecture}
+
+In this section the hardware architecture will be explained and how inputs and
+outputs are handled. Inputs are handled by an input circuit, which sends the
+data directly to the processor. \nl
+
+Power to the engines is sent from the processor to the co-processor, which then
+sends the information directly to the engines. 
