- Changed lots of stuff

--- a/sections/Analyse/SystemDescription/RTS.tex
+++ b/sections/Analyse/SystemDescription/RTS.tex
@@ -20,7 +20,7 @@ together in tandem. These tasks can be run at set intervals, or might have
 individual deadlines for when they must have finished their execution. When a
 task is executed, it works by sensing the environment around it, performing a
 computation and deciding whether or not to react to the input by changing the
-system state. In an example of a task in a real-time system, such as ABS, a task
+system state. An example of a task in a real-time system, such as ABS, a task
 monitors the applied pressure on the brakes and the individual speed of the
 wheels. It then performs a computation to see whether or not the brakes have
 locked, and depending on the outcome it will change the state of the system(the
