--- a/sections/Implementation/SoftwareHierachy.tex
+++ b/sections/Implementation/SoftwareHierachy.tex
@@ -2,4 +2,4 @@
 The software for the \name turret is structured such that there is clearly
 defined responsibilities for each system component. This is shown in the
 structuring of libraries, where \ldots \fix{}{We have a structure such that:
-constants->turretLib->CalcFPos->Program}
+constants->CalcFPos->turretLib->Program}
