--- a/sections/Implementation/NXCLang.tex
+++ b/sections/Implementation/NXCLang.tex
@@ -1,7 +1,7 @@
 \section{Programming Language}
 The software used in the \name project has been written in the language NXC,
 which is a domain specific language specialized for writing programs for the
-Lego NXT platform \cite{NXCIntro}. NXC is similar the language C, and as such
+Lego NXT platform \cite{NXCIntro}. NXC is similar to the language C, and as such
 uses many of the same constructs, including the imperative programming approach. As the
 language is domain specific, it comes with its own libraries and their
 respective documentation \cite{NXCIntro}. As described in the NXC documentation,
