--- a/sections/Analyse/SystemDescription/MI.tex
+++ b/sections/Analyse/SystemDescription/MI.tex
@@ -22,25 +22,34 @@ knowledge in a suitable way that allows it to work it into a suitable solution.
 \subsection{Knowledge Representation}\label{KR}
 %See MI book chapter 1.4 p.12
 
-\name needs to be able to represent the problem of hitting a
-moving target as a suitable representation. This representation can then be
-computed into a suitable output which in turn can be interpreted as
-a solution, whether or not the target is actually hit. This can be seen in
-\autoref{MIRep}.
+In order to be able to intelligently control the turret, \name needs to be able
+to model the problem of hitting a moving target into a suitable representation,
+which can be understood by the computer. By modelling the problem into a
+representation on which computational operations can be executed, it is possible
+to use a computer to determine a solution. The result of this computation is a
+suitable output which in turn can be interpreted as a solution, whether or not
+the target is actually hit. The model below in \autoref{MIRep}, presents the
+correlation between the informal and formal representation, where the informal
+is models the problem domain, and the formal the computational domain.
 
 \figxs[0.8]{MIRep}{An illustration of how a problem is converted into a
 solution}{\citep[ch. 1.4 p.12]{MIBook}}
 
-The representation is a piece of knowledge from the representation
-scheme. The representation scheme is used to make sure the individual
+% The representation is a piece of knowledge from the representation
+% scheme. 
+When modelling a problem, we make use of knowledge as a means of choosing the
+right solution. In the field of machine intelligence, knowledge is defined as
+the information about a domain, which can be used to solve problems in this
+domain. When implementing knowledge into a system, it will take the form of a
+representation scheme, which defines the computational form this knowledge will
+be represented by. The representation scheme is used to make sure the individual
 representations are detailed and close to the problem, such that the necessary
-knowledge can be used to solve said problem \fix{\citep[ch.1.4.1]{MIBook}}{Not
-the right ch?}.
+knowledge can be used to solve said problem \citep[ch.1.4]{MIBook}.
 Examples of knowledge that \name has is: the targets speed and how much the turret has
 turned. When the turret has a sufficient amount of knowledge, it should be used
 in a way that makes it possible to compute an output. Whether this output is a
-solution or not, depends on what a solution is. There are 4 different categories
-of solutions \citep[ch.1.4.1]{MIBook}:
+solution or not, depends on what a solution is. For this purpose, there are 4
+different categories of solutions \citep[ch.1.4.1]{MIBook}:
 
 \begin{itemize}
   \item \textbf{Optimal solution} - A solution which has been deemed optimal
@@ -60,11 +69,13 @@ certain limits to how much time can be spent searching and waiting for the
 optimal shot.
 
 \subsection{Design Space}
-The design space of an intelligent agent can be considered a series of 8
-factors, which are used to give an estimation of the system \citep[ch.1.5]{MIBook}. 
-These factors are: modularity, representation scheme, planning
-horizon, uncertainty, preference, number of agents, learning and computational
-limits.
+When designing intelligent agents, we have a number of design dimensions which
+form a coarse framework for the design process. This framework represents the
+design space of an intelligent agent, and can be considered a series of 8
+factors, which are used to give an estimation of the system
+\citep[ch.1.5]{MIBook}. These factors are: modularity, representation scheme,
+planning horizon, uncertainty, preference, number of agents, learning and
+computational limits.
 
 \subsubsection{Modularity}
 Modularity describes how easily the system can be divided into modules, as well
