--- a/sections/Testing/Testing.tex
+++ b/sections/Testing/Testing.tex
@@ -77,3 +77,4 @@ Test Num:                     & 4      \\ \hline
 \caption{Results from data set 4.}
 \label{AngleTest1Result}
 \end{table}
+\inputS{Testing/UnitTest}
