Examples in rts

--- a/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
+++ b/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
@@ -29,7 +29,7 @@ of an antilock braking system in a car.}
 % laptop, or  mainframe  computer.}\nl
 
 This means that embedded systems cover alot of different types of computers, for example
-the ABS-brakes in a modern car, the cash registers in retailstores, washing machines, etc.
+the antilock braking system(ABS) in a modern car, the cash registers in retailstores, washing machines, etc.
 The requirements can therefore differ alot between systems, although they do
 share some characteristics \citep[ch.1.1]{vahid1999embedded}:
 
