--- a/sections/Analyse/SystemDescription/RTS.tex
+++ b/sections/Analyse/SystemDescription/RTS.tex
@@ -1,10 +1,16 @@
 \section{Real-Time Systems}\label{rts}
 
-\name is an autonomous turret that needs to be capable of hitting a moving
-target, in order to accomplish this, it will to react to its surroundings and
-be able to fire at the correct time, not too soon or too late. It can thus be
-treated as a real-time system, which we define as:
+% \name is an autonomous turret that needs to be capable of hitting a moving
+% target, in order to accomplish this, it will to react to its surroundings and
+% be able to fire at the correct time, not too soon or too late. It can thus be
+% treated as a real-time system, which we define as:
 
+As \name is an autonomous turret which needs to be capable of hitting a moving
+target, in needs to compute the information from its sensors. In order to
+accomplish this, it will to react to its surroundings and fire at the
+correct time, not too soon or too late. As the turret needs to react to
+information and operate within deadlines, it can be treated as a real-time
+system, which we define as:
 
 \begin{center}
 \begin{minipage}{0.8\linewidth}
@@ -18,13 +24,14 @@ its deadlines.}
 Real-time systems often consists of several tasks or threads, which work
 together in tandem. These tasks can be run at set intervals, or might have
 individual deadlines for when they must have finished their execution. When a
-task is executed, it works by sensing the environment around it, performing a
-computation and deciding whether or not to react to the input by changing the
-system state. An example of a task in a real-time system, such as ABS, a task
-monitors the applied pressure on the brakes and the individual speed of the
-wheels. It then performs a computation to see whether or not the brakes have
-locked, and depending on the outcome it will change the state of the system(the
-brakes) in order to prevent locking of the brakes \citep[ch.1A]{Realtime}.
+task is executed, it works by gathering information about the sorrounding
+environment, performing a computation and deciding whether or not to react to
+the input by changing the system state. An example of a task in a real-time
+system, such as Anti-lock braking system (ABS), could be a task which monitors
+the applied pressure on the brakes and the individual speed of the wheels. It
+then performs a computation to see whether or not the brakes have locked, and
+depending on the outcome it will change the state of the system(the brakes) in
+order to prevent locking of the brakes \citep[ch.1A]{Realtime}.
 
 
 % \fix{Real-time systems are often comprised of different task working together.
@@ -41,7 +48,8 @@ brakes) in order to prevent locking of the brakes \citep[ch.1A]{Realtime}.
 % \citep[ch.1A]{Realtime}.}{Need a slight rewrite}\nl
 
 Tasks can generally be divided into two different groups, \textbf{periodic} and
-\textbf{aperiodic} \citep[ch.1A]{Realtime}: 
+\textbf{aperiodic} depending on the circumstance of their execution.
+\citep[ch.1A]{Realtime}:
 
 \begin{itemize}
   \item \textbf{Periodic} tasks are those that need to be run at regular
@@ -79,9 +87,19 @@ deadlines which are defined by how severe the consequence of missing it are
   \item \textbf{Soft} missing this deadline is not severe at all, and the
   usefulness of the result decreases after the deadline has passed.
 \end{itemize}
-\nl
-\name is regarded as a firm real-time application, since missing a deadline will render the calculation useless, although the system can still function. In a broader scope, the system could be argued as hard if the result of a missed deadline is the failure to shoot down a hostile target resulting in friendly casualties. 
-% These tasks generally have deadlines associated with them. There are three types
+
+Using the previous example with an Anti-lock braking system, it is clear that
+the system uses hard deadlines, as it would not be able to function if it did
+not adhere to certain deadlines, since a failure to complete the task may result
+in the wheels locking which in turns causes an accident.
+
+We regarded \name as a firm real-time application, since missing a deadline
+will render the calculation useless, although the system can still function. In
+a broader scope, the system could be argued as hard if the result of a missed
+deadline is the failure to shoot down a hostile target resulting in friendly
+casualties.
+% These tasks generally have deadlines associated with them. There are three
+% types
 % of tasks which are defined by how severe the consequence of missing a
 % deadline is. If the real-time task is \textbf{hard} the consequences of missing
 % are catastrophic, and can cause unacceptable damage to the system. 
