--- a/setup/chapters.tex
+++ b/setup/chapters.tex
@@ -26,7 +26,7 @@
 \input{sections/Implementation/Implementation.tex}
 
 \part{Testing}
-\inputS{Testing/Testing}
+\inputS{Testing/UnitTest}
 %Physics of shooting
 %Turret design choises
 %	Different itterations of the turret
